# VoxelDeformations

./: CMakeLists.txt
shaders/: line.frag  line.vert  point.frag  point.vert
src/: CMakeLists.txt  main.cpp  utils.h
src/bezier_curve/: CMakeLists.txt  main.cpp
src/utils/: CMakeLists.txt  utils.cpp  utils.h
